# financial-complaint-analyzer

./: .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/demo/: page.tsx
apps/web/app/login/: page.tsx
apps/web/components/: Logo.tsx  MotionWrap.tsx  TypingDemo.tsx
apps/web/lib/: api.ts
apps/widget/: README.md  demo.html
backend/: .env.example  Dockerfile  requirements.txt  start.sh
backend/app/: errors.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  models.py  session.py  types.py
backend/app/ingestion/: pdf.py  url.py
backend/app/rag/: chunking.py  pipeline.py  providers.py  retriever_db.py
backend/app/schemas/: auth.py  chat.py  document.py  project.py  public.py
backend/app/services/: chat.py  indexing.py  rate_limit.py
backend/app/static/: widget.js
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py  test_health.py  test_indexing.py  test_ingestion.py  test_projects.py  test_providers.py  test_public.py  test_rag.py  test_rate_limit.py
infra/: render.yaml
notebooks/: 01_eda_and_preprocessing.ipynb
scripts/: evaluate_rag.py
src/complaint_analyst/: data_processing.py  mock_rag_pipeline.py  rag_pipeline.py  vector_store.py
(+8 files in other folders)
