[tool.poetry]
name = "complaint-analyst"
version = "0.1.0"
description = "AI tool to analyze and answer questions about customer complaints at CrediTrust Financial."
authors = ["YOnas amyonassintayehu@gmail.com"]
readme = "README.md"
packages = [{include = "complaint_analyst", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core ML & Data
pandas = "^2.1.3"
langchain = "^0.0.340"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"          
transformers = "^4.35.2"
torch = "^2.1.1"             
# Application
streamlit = "^1.28.2"
# Utilities
python-dotenv = "^1.0.0"     
tqdm = "^4.66.1"             
torchvision = {version = "^0.22.1", source = "pypi"}
torchaudio = {version = "^2.7.1", source = "pypi"}

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"         
matplotlib = "^3.8.2"        
seaborn = "^0.13.0"           
# Quality & Testing
pytest = "^7.4.3"
black = "^23.11.0"
ruff = "^0.1.6"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool Configurations
[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "A", "C4"] 